adding in JAVA_OPTS