@@ -9,6 +9,7 @@ git clone git://github.com/Islandora/tuque.git
 git clone -b $FEDORA_VERSION git://github.com/GervaisdeM/islandora_tomcat.git
 cd islandora_tomcat
 export CATALINA_HOME='.'
+export JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled -Djavax.net.ssl.trustStore=$CATALINA_HOME/fedora/server/truststore -Djavax.net.ssl.trustStorePassword=tomcat"
 ./bin/startup.sh
 cd $HOME
 pear upgrade --force Console_Getopt
